@@ -4,7 +4,7 @@
     <section name="ExpressionsToBlock" type="IPBan.ExpressionsToBlockConfigSectionHandler, IPBan" />
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
-  
+
   <!--
     Setup expressions to block
     You may specify the keywords to look for as well as an array of ExpressionsToBlockGroup objects.
@@ -13,7 +13,7 @@
   -->
   <ExpressionsToBlock>
     <Groups>
-      
+
       <!-- This group will block audit failures from failed login attempts to Windows -->
       <Group>
         <Keywords>0x8010000000000000</Keywords>
@@ -21,14 +21,15 @@
         <Expressions>
           <Expression>
             <XPath>//Data[@Name='IpAddress']</XPath>
-            <Regex><![CDATA[
+            <Regex>
+              <![CDATA[
               (?<ipaddress>.+)
             ]]>
             </Regex>
           </Expression>
         </Expressions>
       </Group>
-      
+
       <!-- This group will block audit failures from failed login attempts to Microsoft SQL Server -->
       <Group>
         <Keywords>0x90000000000000</Keywords>
@@ -40,7 +41,8 @@
           </Expression>
           <Expression>
             <XPath>//Data</XPath>
-            <Regex><![CDATA[
+            <Regex>
+              <![CDATA[
               \[Client: ?(?<ipaddress>.*?)\]
             ]]>
             </Regex>
@@ -59,7 +61,8 @@
           </Expression>
           <Expression>
             <XPath>//Data</XPath>
-            <Regex><![CDATA[
+            <Regex>
+              <![CDATA[
               Access denied for user .*?'@'(?<ipaddress>.*?)'
             ]]>
             </Regex>
@@ -69,15 +72,15 @@
 
       <!-- This group will block audit dropped packet failures from firewall drops to Windows
       <Group>
-        <Keywords>0x8010000000000000</Keywords>
+        <Keywords>0x8010000000000001</Keywords>
         <Path>Security</Path>
         <Expressions>
           <Expression>
-            <XPath>//EventID[.="5152"]</XPath>
-            <Regex></Regex>
+            <XPath>//EventID</XPath>
+            <Regex>^(4625|5152)$</Regex>
           </Expression>
           <Expression>
-            <XPath>//Data[@Name="SourceAddress"]</XPath>
+            <XPath>//Data[@Name='SourceAddress']</XPath>
             <Regex>
               <![CDATA[
               (?<ipaddress>.+)
@@ -86,16 +89,16 @@
           </Expression>
         </Expressions>
       </Group>
-       -->
+      -->
       
     </Groups>
-    
+
   </ExpressionsToBlock>
 
   <nlog
     xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    throwExceptions="false" 
+    throwExceptions="false"
     internalLogToConsole="false"
     internalLogToConsoleError="false"
     internalLogLevel="Trace"
@@ -109,7 +112,7 @@
       <logger name="*" minlevel="Info" writeTo="console" />
     </rules>
   </nlog>
-  
+
   <appSettings>
 
     <!-- Number of failed audits in the event viewer before banning the ip address -->
@@ -162,7 +165,9 @@
     <add key="AllowedUserNames" value="" />
 
   </appSettings>
-  
-  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
-  
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+
 </configuration>
